--- a/model_logreg.ipynb
+++ b/model_logreg.ipynb
@@ -971,6 +971,24 @@
     "plt.legend(loc='lower right')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fd842d1",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd774107",
+   "metadata": {},
+   "source": [
+    "### Findings:\n",
+    "* Initial logreg model resulted ROC AUC and accuracy scores of 0.9250 and 0.9077, respectively.\n",
+    "* Hyperparameter tuning caused minimal changes to the logreg model with ROC AUC and accuracy scores of 0.9258 and 0.9071 with best parameters."
+   ]
   }
  ],
  "metadata": {
