Final draft of Logistic Regression model

--- a/model_logreg.ipynb
+++ b/model_logreg.ipynb
@@ -987,7 +987,7 @@
    "source": [
     "### Findings:\n",
     "* Initial logreg model resulted ROC AUC and accuracy scores of 0.9250 and 0.9077, respectively.\n",
-    "* Hyperparameter tuning caused minimal changes to the logreg model with ROC AUC and accuracy scores of 0.9258 and 0.9071 with best parameters."
+    "* Hyperparameter tuning caused minimal changes to the logreg model with ROC AUC and accuracy scores of 0.9258 and 0.9071 with best parameters: C = 10, penalty = 'l1', and solver = 'liblinear."
    ]
   }
  ],
